# wep4you-agent-skills

./: .gitignore  .pre-commit-config.yaml  .semgrep.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
commands/: config-create.md  config-methodologies.md  config-show.md  config-validate.md  config.md  frontmatter.md  help.md  init.md  init.py  note-types.md  props.md  templates.md  types.md  validate.md
config/methodologies/: README.md  loader.py  lyt-ace.yaml  minimal.yaml  para.yaml  zettelkasten.yaml
docs/: MIGRATION.md  TESTING_GUIDE.md
scripts/: create_skill.py  extract_dependencies.py  install_skills.py  validate_skills.py  verify_dependencies.py
skills/: __init__.py
skills/config/: README.md  SKILL.md
skills/config/config/: default.yaml  frontmatter-defaults.yaml  note-types-defaults.yaml
skills/config/references/: configuration.md
skills/config/scripts/: config_cli.py  config_command.py  config_loader.py  config_wizard.py  settings_loader.py
skills/config/templates/: settings.yaml
skills/core/: __init__.py
skills/core/generation/: __init__.py  content.py  frontmatter.py  moc.py  templates.py
skills/core/interactive/: __init__.py
skills/core/models/: __init__.py  note_type.py  settings.py  wizard.py
skills/core/prompts/: __init__.py  init_prompts.py
skills/core/settings/: __init__.py  loader.py  validation.py
skills/core/utils/: __init__.py  paths.py  ranking.py
skills/core/vault/: __init__.py  detection.py  git.py  structure.py
skills/frontmatter/: README.md  SKILL.md
skills/frontmatter/scripts/: frontmatter.py  props_command.py  props_wizard.py
skills/init/: README.md  SKILL.md
skills/init/scripts/: content_generators.py  init_vault.py  vault_utils.py  wizard.py
skills/note-types/: LICENSE  README.md  SKILL.md
skills/note-types/scripts/: note_type_wizard.py  note_types.py  types_command.py
skills/obsidian-commands/: SKILL.md  __init__.py
skills/obsidian_commands/: SKILL.md  __init__.py  deprecation.py  help_command.py  router.py
skills/templates/: README.md  SKILL.md
skills/templates/scripts/: template_wizard.py  templates.py  templates_command.py
skills/validate/: README.md  SKILL.md
skills/validate/config/: default.yaml  minimal.yaml
skills/validate/references/: configuration.md
skills/validate/scripts/: auto_fix.py  reporter.py  validate_command.py  validator.py
templates/dot/: basic.md
templates/map/: basic.md  templater.md
templates/obsidian/: SKILL.md
templates/obsidian/config/: default.yaml
templates/obsidian/scripts/: main.py
templates/skill-template/: SKILL.md
templates/skill-template/config/: default.yaml
templates/skill-template/references/: guide.md
templates/skill-template/scripts/: main.py
templates/source/: basic.md
tests/: __init__.py  conftest.py  test_config_loader.py  test_create_skill.py  test_frontmatter.py  test_init.py  test_init_validate_integration.py  test_install_skills.py  test_methodology_loader.py  test_note_type_wizard.py  test_note_types.py  test_settings_loader.py  test_templates.py  test_validate_skills.py  test_validator.py  test_verify_dependencies.py
tests/core/: conftest.py
tests/core/generation/: test_content.py  test_frontmatter.py  test_moc.py  test_templates.py
tests/core/models/: test_note_type.py  test_wizard.py
tests/core/prompts/: test_init_prompts.py
tests/core/settings/: test_loader.py  test_validation.py
tests/core/utils/: test_ranking.py
tests/core/vault/: test_git.py  test_structure.py
tests/e2e/: test_command_workflows.py  test_interactive_modes.py
tests/fixtures/invalid/: date-mismatch.md  has-title.md  missing-type.md  unquoted-wikilink.md
tests/fixtures/valid/: minimal-valid.md  valid-note.md
tests/integration/: __init__.py  test_command_invocation.py
tests/integration/scripts/: __init__.py  test_config_loader.py  test_extract_dependencies.py  test_frontmatter.py  test_init.py  test_init_validate_integration.py  test_methodology_loader.py  test_note_type_wizard.py  test_note_types.py  test_settings_loader.py  test_templates.py  test_validator.py
tests/unit/: test_config_wizard.py  test_help_examples.py  test_props_wizard.py  test_template_wizard.py
(+14 files in other folders)
